--- a/index.html
+++ b/index.html
@@ -27,6 +27,66 @@
     </header>
 
     <!-- HERO -->
+    <section>
+  <h2 class="text-3xl font-bold mb-4">Top 5 Harnais pour chien 2025</h2>
+  <p class="text-gray-600 mb-6">Découvrez notre sélection de 5 harnais pour chien confortables et pratiques, adaptés à différentes tailles et besoins.</p>
+
+  <!-- Produit 1 -->
+  <div class="bg-white rounded-lg shadow p-6 mb-6">
+    <h3 class="text-2xl font-semibold mb-2">Harnais Patte Chic – Modèle 1</h3>
+    <img src="https://m.media-amazon.com/images/I/71IVrOe0j3L._AC_SL1500_.jpg" alt="Harnais Patte Chic" class="w-full h-56 object-cover rounded-md mb-4" />
+    <ul class="list-disc list-inside mb-3">
+      <li><strong>Avantages :</strong> Ajustable, rembourré, facile à mettre et retirer.</li>
+      <li><strong>Inconvénients :</strong> Peut être un peu large pour très petits chiens.</li>
+    </ul>
+    <a href="https://www.amazon.fr/dp/B09J867KR3?tag=jearribe-21" class="inline-block px-5 py-3 bg-pink-600 text-white rounded-md">Voir sur Amazon</a>
+  </div>
+
+  <!-- Produit 2 -->
+  <div class="bg-white rounded-lg shadow p-6 mb-6">
+    <h3 class="text-2xl font-semibold mb-2">Harnais Rabbitgoo – Modèle 2</h3>
+    <img src="https://m.media-amazon.com/images/I/71G2SzBzz5L._AC_SL1500_.jpg" alt="Harnais Rabbitgoo" class="w-full h-56 object-cover rounded-md mb-4" />
+    <ul class="list-disc list-inside mb-3">
+      <li><strong>Avantages :</strong> Réglable, bande réfléchissante, confortable pour la marche quotidienne.</li>
+      <li><strong>Inconvénients :</strong> Les sangles peuvent glisser si mal ajustées.</li>
+    </ul>
+    <a href="https://www.amazon.fr/rabbitgoo-Harnais-Traction-R%C3%A9glable-R%C3%A9fl%C3%A9chissant/dp/B0CQX4HFL8?tag=jearribe-21" class="inline-block px-5 py-3 bg-pink-600 text-white rounded-md">Voir sur Amazon</a>
+  </div>
+
+  <!-- Produit 3 -->
+  <div class="bg-white rounded-lg shadow p-6 mb-6">
+    <h3 class="text-2xl font-semibold mb-2">Harnais IDC Power – Modèle 3</h3>
+    <img src="https://m.media-amazon.com/images/I/71XU0iHh7kL._AC_SL1500_.jpg" alt="Harnais IDC Power" class="w-full h-56 object-cover rounded-md mb-4" />
+    <ul class="list-disc list-inside mb-3">
+      <li><strong>Avantages :</strong> Très robuste, idéal pour les chiens forts, anneau arrière et frontal pour traction.</li>
+      <li><strong>Inconvénients :</strong> Plus lourd, moins adapté aux petites races.</li>
+    </ul>
+    <a href="https://www.amazon.fr/Harnais-IDC-Power-Taille-Noir/dp/B003BZ4I9A?tag=jearribe-21" class="inline-block px-5 py-3 bg-pink-600 text-white rounded-md">Voir sur Amazon</a>
+  </div>
+
+  <!-- Produit 4 -->
+  <div class="bg-white rounded-lg shadow p-6 mb-6">
+    <h3 class="text-2xl font-semibold mb-2">Harnais réglable SportPet – Modèle 4</h3>
+    <img src="https://m.media-amazon.com/images/I/71R+pM+IJeL._AC_SL1500_.jpg" alt="Harnais SportPet" class="w-full h-56 object-cover rounded-md mb-4" />
+    <ul class="list-disc list-inside mb-3">
+      <li><strong>Avantages :</strong> Léger, respirant, facile à enfiler et retirer.</li>
+      <li><strong>Inconvénients :</strong> Moins résistant pour chiens très puissants.</li>
+    </ul>
+    <a href="https://www.amazon.fr/gp/aw/d/B0C77JJLW2?tag=jearribe-21" class="inline-block px-5 py-3 bg-pink-600 text-white rounded-md">Voir sur Amazon</a>
+  </div>
+
+  <!-- Produit 5 -->
+  <div class="bg-white rounded-lg shadow p-6 mb-6">
+    <h3 class="text-2xl font-semibold mb-2">Harnais confort Canine – Modèle 5</h3>
+    <img src="https://m.media-amazon.com/images/I/71tDldL5xVL._AC_SL1500_.jpg" alt="Harnais confort Canine" class="w-full h-56 object-cover rounded-md mb-4" />
+    <ul class="list-disc list-inside mb-3">
+      <li><strong>Avantages :</strong> Design confortable, plusieurs tailles disponibles, pratique pour promenades quotidiennes.</li>
+      <li><strong>Inconvénients :</strong> Boucles un peu difficiles à manipuler pour certains utilisateurs.</li>
+    </ul>
+    <a href="https://www.amazon.fr/gp/aw/d/B09ZPJ8YGH?tag=jearribe-21" class="inline-block px-5 py-3 bg-pink-600 text-white rounded-md">Voir sur Amazon</a>
+  </div>
+</section>
+
     <main class="max-w-6xl mx-auto px-6 py-12">
       <section class="grid md:grid-cols-3 gap-8 items-center">
         <div class="md:col-span-2">
