--- a/index.html
+++ b/index.html
@@ -6,76 +6,64 @@
 <title>Mon Univers Animalier</title>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <style>
-  * { box-sizing: border-box; margin: 0; padding: 0; }
-  body { font-family: 'Roboto', sans-serif; background: #fefefe; color: #333; }
-  header {
-    background: url('banniere.jpg') center/cover no-repeat;
-    height: 350px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    text-shadow: 1px 1px 6px rgba(0,0,0,0.6);
-  }
-  header h1 { font-size: 3rem; }
-  nav { display: flex; justify-content: center; gap: 20px; padding: 15px; background: #fff; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
-  nav a { text-decoration: none; color: #333; font-weight: 500; }
-  nav a:hover { color: #4CAF50; }
-  main { max-width: 1000px; margin: 30px auto; padding: 0 20px; }
-  .section-title { font-size: 2rem; margin-bottom: 15px; color: #4CAF50; }
-  .intro { text-align: center; margin-bottom: 50px; }
-  .intro p { font-size: 1.2rem; line-height: 1.8; max-width: 700px; margin: 0 auto; }
-  .cards { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
-  .card { background: #fff; border-radius: 10px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.1); transition: transform 0.3s; }
-  .card:hover { transform: translateY(-5px); }
-  .card img { width: 100%; height: 200px; object-fit: cover; }
-  .card-content { padding: 15px; }
-  .card-content h3 { margin-bottom: 10px; color: #4CAF50; }
-  .card-content p { font-size: 0.95rem; line-height: 1.5; }
-  footer { text-align: center; padding: 25px; background: #333; color: white; margin-top: 50px; }
+  * { box-sizing: border-box; margin:0; padding:0; }
+  body { font-family: 'Roboto', sans-serif; background:#fefefe; color:#333; }
+  header { position: relative; height: 400px; overflow: hidden; }
+  header img { width:100%; height:100%; object-fit:cover; }
+  header h1 { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); color:white; font-size:3rem; text-shadow:2px 2px 10px rgba(0,0,0,0.7); }
+  
+  nav { display:flex; justify-content:center; gap:20px; padding:15px; background:#fff; box-shadow:0 2px 5px rgba(0,0,0,0.1); }
+  nav a { text-decoration:none; color:#333; font-weight:500; }
+  nav a:hover { color:#4CAF50; }
+
+  main { max-width:1200px; margin:30px auto; padding:0 20px; }
+
+  .section-title { font-size:2rem; margin-bottom:20px; color:#4CAF50; text-align:center; }
+
+  /* Slider */
+  .slider { position:relative; width:100%; max-width:1000px; margin:0 auto 50px; overflow:hidden; border-radius:15px; box-shadow:0 4px 12px rgba(0,0,0,0.1); }
+  .slides { display:flex; transition: transform 0.5s ease-in-out; }
+  .slides img { width:100%; flex-shrink:0; height:400px; object-fit:cover; }
+
+  /* Cartes */
+  .cards { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; }
+  .card { background:#fff; border-radius:10px; overflow:hidden; box-shadow:0 4px 12px rgba(0,0,0,0.1); transition: transform 0.3s; }
+  .card:hover { transform:translateY(-5px); }
+  .card img { width:100%; height:200px; object-fit:cover; }
+  .card-content { padding:15px; }
+  .card-content h3 { margin-bottom:10px; color:#4CAF50; }
+  .card-content p { font-size:0.95rem; line-height:1.5; }
+
+  footer { text-align:center; padding:25px; background:#333; color:white; margin-top:50px; }
 </style>
 </head>
 <body>
 
 <header>
+  <img src="banniere_animaux.jpg" alt="Bannière animaux">
   <h1>Mon Univers Animalier</h1>
 </header>
 
 <nav>
   <a href="#about">À propos</a>
-  <a href="#tips">Conseils</a>
+  <a href="#slider">Galerie</a>
   <a href="#accessories">Accessoires</a>
 </nav>
 
 <main>
   <section id="about" class="intro">
     <h2 class="section-title">À propos de moi</h2>
-    <p>Passionné par les animaux depuis toujours, je partage ici mes expériences, mes conseils et mes bons plans pour offrir le meilleur à nos compagnons à quatre pattes.</p>
+    <p style="text-align:center; max-width:700px; margin:0 auto 50px;">Passionné par les animaux depuis toujours, je partage ici mes expériences, mes conseils et mes bons plans pour offrir le meilleur à nos compagnons à quatre pattes.</p>
   </section>
 
-  <section id="tips">
-    <h2 class="section-title">Conseils & Bons plans</h2>
-    <div class="cards">
-      <div class="card">
-        <img src="conseil1.jpg" alt="Conseil 1">
-        <div class="card-content">
-          <h3>Alimentation adaptée</h3>
-          <p>Comment choisir le meilleur aliment pour votre compagnon selon son âge et sa race.</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="conseil2.jpg" alt="Conseil 2">
-        <div class="card-content">
-          <h3>Accessoires essentiels</h3>
-          <p>Découvrez les accessoires indispensables pour le confort et la sécurité de votre animal.</p>
-        </div>
-      </div>
-      <div class="card">
-        <img src="conseil3.jpg" alt="Conseil 3">
-        <div class="card-content">
-          <h3>Bons plans</h3>
-          <p>Mes astuces pour économiser tout en offrant le meilleur à votre compagnon.</p>
-        </div>
+  <section id="slider">
+    <h2 class="section-title">Galerie d'animaux</h2>
+    <div class="slider">
+      <div class="slides">
+        <img src="animal1.jpg" alt="Animal 1">
+        <img src="animal2.jpg" alt="Animal 2">
+        <img src="animal3.jpg" alt="Animal 3">
+        <img src="animal4.jpg" alt="Animal 4">
       </div>
     </div>
   </section>
@@ -111,6 +99,21 @@
 <footer>
   &copy; 2025 Mon Univers Animalier. Tous droits réservés.
 </footer>
+
+<script>
+  // Slider automatique
+  const slides = document.querySelector('.slides');
+  const images = document.querySelectorAll('.slides img');
+  let index = 0;
+
+  function nextSlide() {
+    index++;
+    if(index >= images.length) index = 0;
+    slides.style.transform = `translateX(${-index * 100}%)`;
+  }
+
+  setInterval(nextSlide, 3000); // change toutes les 3 sec
+</script>
 
 </body>
 </html>
