--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   header { position: relative; height: 400px; overflow: hidden; }
   header img { width:100%; height:100%; object-fit:cover; }
   header h1 { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); color:white; font-size:3rem; text-shadow:2px 2px 10px rgba(0,0,0,0.7); }
-  
+
   nav { display:flex; justify-content:center; gap:20px; padding:15px; background:#fff; box-shadow:0 2px 5px rgba(0,0,0,0.1); }
   nav a { text-decoration:none; color:#333; font-weight:500; }
   nav a:hover { color:#4CAF50; }
@@ -40,7 +40,7 @@
 <body>
 
 <header>
-  <img src="banniere_animaux.jpg" alt="Bannière animaux">
+  <img src="https://images.unsplash.com/photo-1601758173929-adef1b76ffb8?auto=format&fit=crop&w=1350&q=80" alt="Bannière animaux">
   <h1>Mon Univers Animalier</h1>
 </header>
 
@@ -60,10 +60,10 @@
     <h2 class="section-title">Galerie d'animaux</h2>
     <div class="slider">
       <div class="slides">
-        <img src="animal1.jpg" alt="Animal 1">
-        <img src="animal2.jpg" alt="Animal 2">
-        <img src="animal3.jpg" alt="Animal 3">
-        <img src="animal4.jpg" alt="Animal 4">
+        <img src="https://images.unsplash.com/photo-1592194996308-7b43878e84a6?auto=format&fit=crop&w=1200&q=80" alt="Chat mignon">
+        <img src="https://images.unsplash.com/photo-1558788353-f76d92427f16?auto=format&fit=crop&w=1200&q=80" alt="Chien mignon">
+        <img src="https://images.unsplash.com/photo-1592194996309-d4b0b1a0b7f8?auto=format&fit=crop&w=1200&q=80" alt="Lapin mignon">
+        <img src="https://images.unsplash.com/photo-1617196034203-d7b17b6a88d0?auto=format&fit=crop&w=1200&q=80" alt="Oiseau coloré">
       </div>
     </div>
   </section>
@@ -72,24 +72,24 @@
     <h2 class="section-title">Accessoires recommandés</h2>
     <div class="cards">
       <div class="card">
-        <img src="accessoire1.jpg" alt="Accessoire 1">
+        <img src="https://images.unsplash.com/photo-1607115842535-c0ed9c8e2a3f?auto=format&fit=crop&w=400&q=80" alt="Accessoire 1">
         <div class="card-content">
-          <h3>Accessoire 1</h3>
-          <p>Une description courte et pratique de l’accessoire.</p>
+          <h3>Gamelle design</h3>
+          <p>Gamelle pratique et élégante pour chiens et chats, facile à nettoyer.</p>
         </div>
       </div>
       <div class="card">
-        <img src="accessoire2.jpg" alt="Accessoire 2">
+        <img src="https://images.unsplash.com/photo-1583337130417-7f1c2e93a7f8?auto=format&fit=crop&w=400&q=80" alt="Accessoire 2">
         <div class="card-content">
-          <h3>Accessoire 2</h3>
-          <p>Une description courte et pratique de l’accessoire.</p>
+          <h3>Panier confortable</h3>
+          <p>Panier douillet pour offrir à votre compagnon un vrai coin de repos.</p>
         </div>
       </div>
       <div class="card">
-        <img src="accessoire3.jpg" alt="Accessoire 3">
+        <img src="https://images.unsplash.com/photo-1592194996312-4d0e6e7f4f5c?auto=format&fit=crop&w=400&q=80" alt="Accessoire 3">
         <div class="card-content">
-          <h3>Accessoire 3</h3>
-          <p>Une description courte et pratique de l’accessoire.</p>
+          <h3>Jouet interactif</h3>
+          <p>Jouet stimulant pour garder votre animal actif et heureux toute la journée.</p>
         </div>
       </div>
     </div>
