--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
 
 <header>
-  <img src="https://images.unsplash.com/photo-1601758173929-adef1b76ffb8?auto=format&fit=crop&w=1350&q=80" alt="Bannière animaux">
+  <img src="https://cdn.pixabay.com/photo/2017/09/25/13/12/animals-2785074_1280.jpg" alt="Bannière animaux">
   <h1>Mon Univers Animalier</h1>
 </header>
 
@@ -60,10 +60,10 @@
     <h2 class="section-title">Galerie d'animaux</h2>
     <div class="slider">
       <div class="slides">
-        <img src="https://images.unsplash.com/photo-1592194996308-7b43878e84a6?auto=format&fit=crop&w=1200&q=80" alt="Chat mignon">
-        <img src="https://images.unsplash.com/photo-1558788353-f76d92427f16?auto=format&fit=crop&w=1200&q=80" alt="Chien mignon">
-        <img src="https://images.unsplash.com/photo-1592194996309-d4b0b1a0b7f8?auto=format&fit=crop&w=1200&q=80" alt="Lapin mignon">
-        <img src="https://images.unsplash.com/photo-1617196034203-d7b17b6a88d0?auto=format&fit=crop&w=1200&q=80" alt="Oiseau coloré">
+        <img src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cat-2785072_1280.jpg" alt="Chat mignon">
+        <img src="https://cdn.pixabay.com/photo/2016/02/19/10/00/dog-1207801_1280.jpg" alt="Chien mignon">
+        <img src="https://cdn.pixabay.com/photo/2017/11/09/21/41/hamster-2931965_1280.jpg" alt="Hamster mignon">
+        <img src="https://cdn.pixabay.com/photo/2015/06/19/21/24/bird-815475_1280.jpg" alt="Oiseau coloré">
       </div>
     </div>
   </section>
@@ -72,21 +72,21 @@
     <h2 class="section-title">Accessoires recommandés</h2>
     <div class="cards">
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1607115842535-c0ed9c8e2a3f?auto=format&fit=crop&w=400&q=80" alt="Accessoire 1">
+        <img src="https://cdn.pixabay.com/photo/2017/08/10/07/30/dog-2612341_1280.jpg" alt="Accessoire 1">
         <div class="card-content">
           <h3>Gamelle design</h3>
           <p>Gamelle pratique et élégante pour chiens et chats, facile à nettoyer.</p>
         </div>
       </div>
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1583337130417-7f1c2e93a7f8?auto=format&fit=crop&w=400&q=80" alt="Accessoire 2">
+        <img src="https://cdn.pixabay.com/photo/2016/11/29/04/19/animal-1867121_1280.jpg" alt="Accessoire 2">
         <div class="card-content">
           <h3>Panier confortable</h3>
           <p>Panier douillet pour offrir à votre compagnon un vrai coin de repos.</p>
         </div>
       </div>
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1592194996312-4d0e6e7f4f5c?auto=format&fit=crop&w=400&q=80" alt="Accessoire 3">
+        <img src="https://cdn.pixabay.com/photo/2017/09/25/14/45/dog-toys-2785544_1280.jpg" alt="Accessoire 3">
         <div class="card-content">
           <h3>Jouet interactif</h3>
           <p>Jouet stimulant pour garder votre animal actif et heureux toute la journée.</p>
@@ -101,7 +101,6 @@
 </footer>
 
 <script>
-  // Slider automatique
   const slides = document.querySelector('.slides');
   const images = document.querySelectorAll('.slides img');
   let index = 0;
@@ -112,7 +111,7 @@
     slides.style.transform = `translateX(${-index * 100}%)`;
   }
 
-  setInterval(nextSlide, 3000); // change toutes les 3 sec
+  setInterval(nextSlide, 3000);
 </script>
 
 </body>
