--- a/index.html
+++ b/index.html
@@ -3,29 +3,42 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mon Univers Animalier</title>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<title>🐾 Le Royaume des Bergers Australiens 🐾</title>
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <style>
   * { box-sizing: border-box; margin:0; padding:0; }
   body { font-family: 'Roboto', sans-serif; background:#fefefe; color:#333; }
-  header { position: relative; height: 400px; overflow: hidden; }
-  header img { width:100%; height:100%; object-fit:cover; }
-  header h1 { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); color:white; font-size:3rem; text-shadow:2px 2px 10px rgba(0,0,0,0.7); }
+  
+  header {
+    position: relative;
+    height: 350px;
+    overflow: hidden;
+  }
+  header img {
+    width:100%;
+    height:100%;
+    object-fit:cover;
+  }
+  header h1 {
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    color:white;
+    font-family:'Pacifico', cursive;
+    font-size:3rem;
+    text-shadow: 2px 2px 12px rgba(0,0,0,0.7);
+    text-align:center;
+  }
 
-  nav { display:flex; justify-content:center; gap:20px; padding:15px; background:#fff; box-shadow:0 2px 5px rgba(0,0,0,0.1); }
-  nav a { text-decoration:none; color:#333; font-weight:500; }
+  nav { display:flex; justify-content:center; gap:25px; padding:15px; background:#fff; box-shadow:0 2px 5px rgba(0,0,0,0.1); flex-wrap:wrap; }
+  nav a { text-decoration:none; color:#333; font-weight:500; font-size:1.1rem; }
   nav a:hover { color:#4CAF50; }
 
   main { max-width:1200px; margin:30px auto; padding:0 20px; }
 
   .section-title { font-size:2rem; margin-bottom:20px; color:#4CAF50; text-align:center; }
 
-  /* Slider */
-  .slider { position:relative; width:100%; max-width:1000px; margin:0 auto 50px; overflow:hidden; border-radius:15px; box-shadow:0 4px 12px rgba(0,0,0,0.1); }
-  .slides { display:flex; transition: transform 0.5s ease-in-out; }
-  .slides img { width:100%; flex-shrink:0; height:400px; object-fit:cover; }
-
-  /* Cartes */
   .cards { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; }
   .card { background:#fff; border-radius:10px; overflow:hidden; box-shadow:0 4px 12px rgba(0,0,0,0.1); transition: transform 0.3s; }
   .card:hover { transform:translateY(-5px); }
@@ -35,58 +48,44 @@
   .card-content p { font-size:0.95rem; line-height:1.5; }
 
   footer { text-align:center; padding:25px; background:#333; color:white; margin-top:50px; }
+
+  p.intro { text-align:center; max-width:700px; margin:0 auto 50px; font-size:1.1rem; line-height:1.7; }
 </style>
 </head>
 <body>
 
 <header>
-  <img src="https://cdn.pixabay.com/photo/2017/09/25/13/12/animals-2785074_1280.jpg" alt="Bannière animaux">
-  <h1>Mon Univers Animalier</h1>
+  <img src="https://cdn.pixabay.com/photo/2016/11/21/16/09/dog-1845200_1280.jpg" alt="Famille de Bergers Australiens">
+  <h1>🐾 Le Royaume des Bergers Australiens 🐾</h1>
 </header>
 
 <nav>
-  <a href="#about">À propos</a>
-  <a href="#slider">Galerie</a>
-  <a href="#accessories">Accessoires</a>
+  <a href="#accessories">Accessoires recommandés</a>
+  <a href="#comparatifs">Comparatifs</a>
+  <a href="#bonsplans">Bons plans</a>
+  <a href="#alimentation">Alimentations</a>
 </nav>
 
 <main>
-  <section id="about" class="intro">
-    <h2 class="section-title">À propos de moi</h2>
-    <p style="text-align:center; max-width:700px; margin:0 auto 50px;">Passionné par les animaux depuis toujours, je partage ici mes expériences, mes conseils et mes bons plans pour offrir le meilleur à nos compagnons à quatre pattes.</p>
-  </section>
-
-  <section id="slider">
-    <h2 class="section-title">Galerie d'animaux</h2>
-    <div class="slider">
-      <div class="slides">
-        <img src="https://cdn.pixabay.com/photo/2017/09/25/13/12/cat-2785072_1280.jpg" alt="Chat mignon">
-        <img src="https://cdn.pixabay.com/photo/2016/02/19/10/00/dog-1207801_1280.jpg" alt="Chien mignon">
-        <img src="https://cdn.pixabay.com/photo/2017/11/09/21/41/hamster-2931965_1280.jpg" alt="Hamster mignon">
-        <img src="https://cdn.pixabay.com/photo/2015/06/19/21/24/bird-815475_1280.jpg" alt="Oiseau coloré">
-      </div>
-    </div>
-  </section>
-
   <section id="accessories">
     <h2 class="section-title">Accessoires recommandés</h2>
     <div class="cards">
       <div class="card">
-        <img src="https://cdn.pixabay.com/photo/2017/08/10/07/30/dog-2612341_1280.jpg" alt="Accessoire 1">
+        <img src="https://cdn.pixabay.com/photo/2017/08/10/07/30/dog-2612341_1280.jpg" alt="Gamelle design">
         <div class="card-content">
           <h3>Gamelle design</h3>
-          <p>Gamelle pratique et élégante pour chiens et chats, facile à nettoyer.</p>
+          <p>Gamelle pratique et élégante pour chiens, facile à nettoyer et adaptée aux Bergers Australiens.</p>
         </div>
       </div>
       <div class="card">
-        <img src="https://cdn.pixabay.com/photo/2016/11/29/04/19/animal-1867121_1280.jpg" alt="Accessoire 2">
+        <img src="https://cdn.pixabay.com/photo/2016/11/29/04/19/animal-1867121_1280.jpg" alt="Panier confortable">
         <div class="card-content">
           <h3>Panier confortable</h3>
-          <p>Panier douillet pour offrir à votre compagnon un vrai coin de repos.</p>
+          <p>Panier douillet pour offrir un vrai coin de repos à votre compagnon.</p>
         </div>
       </div>
       <div class="card">
-        <img src="https://cdn.pixabay.com/photo/2017/09/25/14/45/dog-toys-2785544_1280.jpg" alt="Accessoire 3">
+        <img src="https://cdn.pixabay.com/photo/2017/09/25/14/45/dog-toys-2785544_1280.jpg" alt="Jouet interactif">
         <div class="card-content">
           <h3>Jouet interactif</h3>
           <p>Jouet stimulant pour garder votre animal actif et heureux toute la journée.</p>
@@ -94,25 +93,29 @@
       </div>
     </div>
   </section>
+
+  <section id="comparatifs">
+    <h2 class="section-title">Comparatifs</h2>
+    <p class="intro">Découvrez les comparatifs des meilleurs produits pour Bergers Australiens : jouets, accessoires et gamelles, testés pour leur qualité et durabilité.</p>
+    <!-- Tu pourras ajouter des cartes ou tableaux comparatifs ici -->
+  </section>
+
+  <section id="bonsplans">
+    <h2 class="section-title">Bons plans</h2>
+    <p class="intro">Profitez de nos conseils pour trouver les meilleures offres sur les produits pour chiens, tout en garantissant confort et sécurité pour votre compagnon.</p>
+    <!-- Ajouter ici listes ou cartes de bons plans -->
+  </section>
+
+  <section id="alimentation">
+    <h2 class="section-title">Alimentations</h2>
+    <p class="intro">Guide des meilleures nourritures pour Bergers Australiens : croquettes, pâtées, aliments naturels et conseils pour une alimentation équilibrée.</p>
+    <!-- Ajouter ici tableaux ou articles sur l’alimentation -->
+  </section>
 </main>
 
 <footer>
-  &copy; 2025 Mon Univers Animalier. Tous droits réservés.
+  &copy; 2025 Le Royaume des Bergers Australiens. Tous droits réservés.
 </footer>
-
-<script>
-  const slides = document.querySelector('.slides');
-  const images = document.querySelectorAll('.slides img');
-  let index = 0;
-
-  function nextSlide() {
-    index++;
-    if(index >= images.length) index = 0;
-    slides.style.transform = `translateX(${-index * 100}%)`;
-  }
-
-  setInterval(nextSlide, 3000);
-</script>
 
 </body>
 </html>
