--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>🐾 Le Royaume des Bergers Animaux 🐾</title>
- <img src="https://st.depositphotos.com/625930674/6259/i/950/depositphotos_62593
-<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<title>🐾 Le Royaume des Animaux 🐾</title>
+
 <style>
   * { box-sizing: border-box; margin:0; padding:0; }
   body { font-family: 'Roboto', sans-serif; background:#fefefe; color:#333; }
