--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>🐾 Le Royaume des Animaux 🐾</title>
-  <img src=Untitled.jpg>
+<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <style>
   * { box-sizing: border-box; margin:0; padding:0; }
   body { font-family: 'Roboto', sans-serif; background:#fefefe; color:#333; }
-  
+
   header {
     position: relative;
     height: 350px;
@@ -36,9 +36,7 @@
   nav a:hover { color:#4CAF50; }
 
   main { max-width:1200px; margin:30px auto; padding:0 20px; }
-
   .section-title { font-size:2rem; margin-bottom:20px; color:#4CAF50; text-align:center; }
-
   .cards { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; }
   .card { background:#fff; border-radius:10px; overflow:hidden; box-shadow:0 4px 12px rgba(0,0,0,0.1); transition: transform 0.3s; }
   .card:hover { transform:translateY(-5px); }
@@ -48,15 +46,14 @@
   .card-content p { font-size:0.95rem; line-height:1.5; }
 
   footer { text-align:center; padding:25px; background:#333; color:white; margin-top:50px; }
-
   p.intro { text-align:center; max-width:700px; margin:0 auto 50px; font-size:1.1rem; line-height:1.7; }
 </style>
 </head>
 <body>
 
 <header>
-  <img src="https://cdn.pixabay.com/photo/2016/11/21/16/09/dog-1845200_1280.jpg" alt="Famille de Bergers Australiens">
-  <h1>🐾 Le Royaume des Bergers Australiens 🐾</h1>
+  <img src="berger-bleu-merle.jpg" alt="Berger australien bleu merle">
+  <h1>🐾 Le Royaume des Animaux 🐾</h1>
 </header>
 
 <nav>
@@ -74,7 +71,7 @@
         <img src="https://cdn.pixabay.com/photo/2017/08/10/07/30/dog-2612341_1280.jpg" alt="Gamelle design">
         <div class="card-content">
           <h3>Gamelle design</h3>
-          <p>Gamelle pratique et élégante pour chiens, facile à nettoyer et adaptée aux Bergers Australiens.</p>
+          <p>Gamelle pratique et élégante pour chiens, facile à nettoyer et adaptée aux animaux.</p>
         </div>
       </div>
       <div class="card">
@@ -96,25 +93,22 @@
 
   <section id="comparatifs">
     <h2 class="section-title">Comparatifs</h2>
-    <p class="intro">Découvrez les comparatifs des meilleurs produits pour Bergers Australiens : jouets, accessoires et gamelles, testés pour leur qualité et durabilité.</p>
-    <!-- Tu pourras ajouter des cartes ou tableaux comparatifs ici -->
+    <p class="intro">Découvrez les comparatifs des meilleurs produits pour animaux : jouets, accessoires et gamelles.</p>
   </section>
 
   <section id="bonsplans">
     <h2 class="section-title">Bons plans</h2>
-    <p class="intro">Profitez de nos conseils pour trouver les meilleures offres sur les produits pour chiens, tout en garantissant confort et sécurité pour votre compagnon.</p>
-    <!-- Ajouter ici listes ou cartes de bons plans -->
+    <p class="intro">Profitez de nos conseils pour trouver les meilleures offres sur les produits pour chiens et chats.</p>
   </section>
 
   <section id="alimentation">
     <h2 class="section-title">Alimentations</h2>
-    <p class="intro">Guide des meilleures nourritures pour Bergers Australiens : croquettes, pâtées, aliments naturels et conseils pour une alimentation équilibrée.</p>
-    <!-- Ajouter ici tableaux ou articles sur l’alimentation -->
+    <p class="intro">Guide des meilleures nourritures pour animaux : croquettes, pâtées, aliments naturels et conseils nutritionnels.</p>
   </section>
 </main>
 
 <footer>
-  &copy; 2025 Le Royaume des Bergers Australiens. Tous droits réservés.
+  &copy; 2025 Le Royaume des Animaux. Tous droits réservés.
 </footer>
 
 </body>
